fixed bug #254 -- those of you who use protectfriends/ops please test this code out before the 1.6.9 release

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.325 2002/02/25 03:39:57 wcc Exp $
+$Id: UPDATES1.6,v 1.326 2002/02/25 04:37:08 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+Boing     guppy     fixed +protectops from reopping users with only +f and +protectfriends
+                    from reopping users with only +o
           Wcc       made a few cosmetic changes to the configure script
           Wcc       more plural fixes for commands and error messages
 Xerxes    guppy     "channel remove" will not crash the bot anymore if you are removing
