--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.326 2002/02/25 04:37:08 guppy Exp $
+$Id: UPDATES1.6,v 1.327 2002/02/25 18:15:50 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+various   guppy     doc/compiling.FAQ now includes info about setting LD_LIBRARY_PATH
 Boing     guppy     fixed +protectops from reopping users with only +f and +protectfriends
                     from reopping users with only +o
           Wcc       made a few cosmetic changes to the configure script
