--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,14 @@
-$Id: UPDATES1.6,v 1.327 2002/02/25 18:15:50 guppy Exp $
+$Id: UPDATES1.6,v 1.328 2002/02/26 06:09:10 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Eule/     changed how protectops and protectfriends works a bit:
+          guppy       if the user has either glob +d or chan +d then no protection
+                      protectfriends now only protects +f users
+                      protectops now only protects +m and +o users
 various   guppy     doc/compiling.FAQ now includes info about setting LD_LIBRARY_PATH
 Boing     guppy     fixed +protectops from reopping users with only +f and +protectfriends
                     from reopping users with only +o
