--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.328 2002/02/26 06:09:10 guppy Exp $
+$Id: UPDATES1.6,v 1.329 2002/02/28 05:13:55 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc       more documentation updates
           Eule/     changed how protectops and protectfriends works a bit:
           guppy       if the user has either glob +d or chan +d then no protection
                       protectfriends now only protects +f users
