because of the way the telnet/dcc code is done and the way the filesystem is integrated into both -- users who have only +x must login via dcc now. There was a bug where if you were +x and had no other flags, you could login even with the wrong password and you would be dumped onto the partyline by default (even if you typed the correct pass in) .. it never threw you into the filesystem by default because of a design flaw that would be too painful to fix in 1.6

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.329 2002/02/28 05:13:55 wcc Exp $
+$Id: UPDATES1.6,v 1.330 2002/02/28 05:28:39 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          guppy     users with only +x can now only login via dcc chat, they cannot use 
+                    telnet
           Wcc       more documentation updates
           Eule/     changed how protectops and protectfriends works a bit:
           guppy       if the user has either glob +d or chan +d then no protection
