--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.330 2002/02/28 05:28:39 guppy Exp $
+$Id: UPDATES1.6,v 1.331 2002/03/01 21:42:23 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+Wanderer| dw	    tcl command modules missing in doc/tcl-commands.doc
           guppy     users with only +x can now only login via dcc chat, they cannot use 
                     telnet
           Wcc       more documentation updates
