--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.332 2002/03/07 04:17:29 guppy Exp $
+$Id: UPDATES1.6,v 1.333 2002/03/07 04:22:59 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Amir      botlink() now safely copies the linker string
 various   Eule      fixed crashes relating to flushmodes
 Wanderer| dw	    tcl command modules missing in doc/tcl-commands.doc
           guppy     users with only +x can now only login via dcc chat, they cannot use 
