added Boing's patches to make a few commands more handlen friendly

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.333 2002/03/07 04:22:59 guppy Exp $
+$Id: UPDATES1.6,v 1.334 2002/03/07 15:41:17 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Boing     made cmd_channel, cmd_dccstat, cmd_who, cmd_whois, cmd_match handlen
+                    friendly
           Amir      botlink() now safely copies the linker string
 various   Eule      fixed crashes relating to flushmodes
 Wanderer| dw	    tcl command modules missing in doc/tcl-commands.doc
