added Amir's fix for the uff bug

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.334 2002/03/07 15:41:17 guppy Exp $
+$Id: UPDATES1.6,v 1.335 2002/03/07 21:18:52 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Amir      fixed a problem with uff not adding entries properly
           Boing     made cmd_channel, cmd_dccstat, cmd_who, cmd_whois, cmd_match handlen
                     friendly
           Amir      botlink() now safely copies the linker string
