--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.335 2002/03/07 21:18:52 guppy Exp $
+$Id: UPDATES1.6,v 1.336 2002/03/09 03:39:14 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc       removed an extra space from the "Writing channel
+                    file..." message
           Amir      fixed a problem with uff not adding entries properly
           Boing     made cmd_channel, cmd_dccstat, cmd_who, cmd_whois, cmd_match handlen
                     friendly
