--- a/INSTALL
+++ b/INSTALL
@@ -1,86 +1,96 @@
 Compilation and Installation of Eggdrop
-Last revised: December 29, 2001
+Last revised: March 08, 2002
   ________________________________________________________________________
 
-This is the quick install guide, if you have had little or no experience
+This is the quick install guide; if you have had little or no experience
 with unix or eggdrop, READ THE README FILE NOW! This file is only for
 experienced users.
 
 (1) WHAT IS EGGDROP?
 
-     Please, read the README file before attempting to set up this bot. 
-     It is NOT easy to use! This file is a quick setup guide, not a miracle 
-     worker. If you enter this file without basic eggdrop knowledge, you 
-     will NOT leave with a working bot! Before asking ANY questions, READ 
-     THE README FILE OR YOU WILL BE BURNED TO A HORRIBLE DEATH! IF YOU DO 
-     NOT READ THAT FILE I WILL PERSONALLY WALK TO YOUR TERMINAL AND BEAT IT 
-     WITH A SMELLY SNEAKER! By the way, read the README file.
+     Please, read the README file before attempting to set up this bot.
+     This file is a quick setup guide, not a miracle worker. If you enter
+     this file without basic eggdrop knowledge, you will NOT leave with a
+     working bot! Before asking ANY questions, READ THE README FILE OR YOU
+     WILL BE BURNED TO A HORRIBLE DEATH! IF YOU DO NOT READ THAT FILE I WILL
+     PERSONALLY WALK TO YOUR TERMINAL AND BEAT IT WITH A SMELLY SNEAKER! By
+     the way, read the README file.
 
 (2) QUICK STARTUP
 
      Eggdrop uses the GNU autoconfigure scripts to make things easier.
 
-  1. Type './configure' from the eggdrop directory. The configure script 
-     will determine how your system is set up and figure out how to correctly
-     compile eggdrop. It will also try to find Tcl, which is required to 
-     compile.
+     1. Type './configure' from the eggdrop directory. The configure script
+        will determine how your system is set up and figure out how to
+        correctly compile eggdrop. It will also try to find Tcl, which is
+        required to compile.
 
-  2. Type either 'make config' or 'make iconfig' to determine which modules
-     will be compiled. 'make config' compiles the default modules (everything
-     but woobie.mod). If you want to choose which modules to compile, use 
-     'make iconfig'.
+     2. Type either 'make config' or 'make iconfig' to determine which
+        modules will be compiled. 'make config' compiles the default modules
+        (everything but woobie.mod). If you want to choose which modules to
+        compile, use 'make iconfig'.
 
-  3. Type 'make' from the eggdrop directory, or, to force a statically
-     linked module bot, type 'make static'. Otherwise, the Makefile will
-     compile whatever type of bot the configure script determined your 
-     system will support. Dynamic is always the better way to go if possible.
-     There are also the 'debug' and 'sdebug' (static-debug) options, which 
-     will give more detailed output on a (highly unlikely :) crash. This 
-     will help the devteam track down the crash and fix the bug. Debug and 
-     sdebug will take a little longer to compile and will enlarge the binary
-     a bit, but it's worth it if you want to support eggdrop development.
+     3. Type 'make' from the eggdrop directory, or to force a statically
+        linked module bot, type 'make static'. Otherwise, the Makefile will
+        compile whatever type of bot the configure script determined your
+        system will support. Dynamic is always the better way to go if
+        possible. There are also the 'debug' and 'sdebug' (static-debug)
+        options, which will give more detailed output on a (highly unlikely :)
+        crash. This will help the devteam track down the crash and fix the
+        bug. Debug and sdebug will take a little longer to compile and will
+        enlarge the binary a bit, but it's worth it if you want to support
+        eggdrop development.
 
-  4. Eggdrop must be installed in a directory somewhere.  This is
-     accomplished by entering the unix command:
+     4. Eggdrop must be installed in a directory somewhere.  This is
+        accomplished by entering the unix command:
 
-     make install
+          make install
 
-     This will install the eggdrop in your home directory in a directory
-     called eggdrop (i.e. /home/user/eggdrop).
+        This will install the eggdrop in your home directory in a directory
+        called eggdrop (i.e. /home/user/eggdrop).
 
-     If you want to install to a different directory, use:
+        If you want to install to a different directory, use:
 
-     make install DEST=<directory>
+          make install DEST=<directory>
 
-     For example: make install DEST=/home/user/otherdir
-     Note you must use full path for every file to be correctly installed.
+        For example:
 
-     [The following is performed from the directory installed above.]
+          make install DEST=/home/user/otherdir
 
-  5. Copy the file 'eggdrop.complete.conf' to a new file, usually the same name
-     as the bot that will use it, e.g. "LamestBot.conf".
+        Note that you must use full path for every file to be correctly
+        installed.
 
-  6. Edit your config file completely.
+        [The following is performed from the directory installed above.]
 
-  7. Start the bot with the "-m" option to create a user file, i.e. './eggdrop
-     -m LamestBot.conf'.
+     5. Copy the file 'eggdrop.complete.conf' to a new file, usually the same
+        name as the bot that will use it, e.g. "LamestBot.conf".
 
-  8. When starting the bot in the future, drop the "-m". If you have edited
-     your config file correctly, you can type: chmod u+x <my-config-file-name>
-     For example: chmod u+x LamestBot.conf
+     6. Edit your config file completely.
 
-     From then on, you will be able to use your config file as a shell 
-     script. You can just type "./LamestBot.conf" from your shell prompt to
-     start up your bot. For this to work, the top line of your script MUST
-     contain the correct path to the Eggdrop executable.
+     7. Start the bot with the "-m" option to create a user file, i.e. './eggdrop
+        -m LamestBot.conf'.
 
-  9. It's advisable to run your bot via crontab, so that it will 
-     automatically restart if the machine goes down or (heaven forbid) the
-     bot should crash. Look at 'scripts/botchk' and 'scripts/autobotchk' 
-     for a great start with crontabbing the bot.
+     8. When starting the bot in the future, drop the "-m". If you have edited
+        your config file correctly, you can type:
 
- 10. Smile, and if you haven't already read the README file in its
-     entirety, go take a long walk off a short pier.
+          chmod u+x <my-config-file-name>
+
+        For example:
+
+          chmod u+x LamestBot.conf
+
+        From then on, you will be able to use your config file as a shell
+        script. You can just type "./LamestBot.conf" from your shell prompt
+        to start up your bot. For this to work, the top line of your script
+        MUST contain the correct path to the Eggdrop executable.
+
+     9. It's advisable to run your bot via crontab, so that it will
+        automatically restart if the machine goes down or (heaven forbid)
+        the bot should crash. Look at 'scripts/botchk' and 'scripts/autobotchk'
+        for a great start with crontabbing the bot.
+
+    10. Smile, and if you haven't already read the README file in its
+        entirety, go take a long walk off a short pier.
 
 (3) MODULES
 
@@ -88,10 +98,10 @@ experienced users.
      binary or can be compiled separately into a file. This allows for a much
      smaller binary.
 
-     If there are any modules that you have made or downloaded, you can add 
-     them to the bot by placing them in the /src/mod directory with a mod 
-     extension. They will be automatically compiled during make for you. 
-     They must have a valid Makefile and, of course, be compatible with 
+     If there are any modules that you have made or downloaded, you can add
+     them to the bot by placing them in the /src/mod directory with a mod
+     extension. They will be automatically compiled during make for you.
+     They must have a valid Makefile and, of course, be compatible with
      the rest of the eggdrop source.
 
      If you wish to add a module at a later time, follow the same steps in
@@ -101,23 +111,24 @@ experienced users.
 
 (3) FREQUENTLY ASKED QUESTIONS
 
-    (Q) What do I do if...?
+      (Q) What do I do if...?
 
-    (A) READ THE README FILE!
+      (A) READ THE README FILE!
 
-    (Q) The readme does not answer...!
- 
-    (A) READ THE README FILE AGAIN!
+      (Q) The readme does not answer...!
 
-    (Q) I still don't know how to...
+      (A) READ THE README FILE AGAIN!
 
-    (A) MEMORIZE THE README FILE!
+      (Q) I still don't know how to...
 
-    (Q) But...</p>
+      (A) MEMORIZE THE README FILE!
 
-    (A) Well, go to www.egghelp.org or www.eggheads.org and see if you can
-        find there what you&#39;re looking for. There are also lots of IRC 
-        help channels and various mailing lists, as seen in the README FILE.
+      (Q) But...
+
+      (A) Well, go to www.egghelp.org or www.eggheads.org and see if you
+          can find there what you're looking for. There are also lots of
+          IRC help channels and various mailing lists, as seen in the README
+          FILE.
 
 This is the end. If you read to this point, hopefully you have also read
 the README file. If not, then READ IT!&@#%@!
