added Eule's aptch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.337 2002/03/09 21:14:14 wcc Exp $
+$Id: UPDATES1.6,v 1.338 2002/03/10 17:34:31 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+various   Eule      modes-per-line is limited to a max of 6 modes per line
           Wcc       more doc fixes
           Wcc       removed an extra space from the "Writing channel
                     file..." message
