Added a few channels to the README and readme.html and made references to other docs in the html files links to their respective html files.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,13 @@
-$Id: UPDATES1.6,v 1.338 2002/03/10 17:34:31 guppy Exp $
+$Id: UPDATES1.6,v 1.339 2002/03/10 18:10:28 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc/      Added a few channels to the README and readme.html
+          SiDEWiNDR and made references to other docs in the html files
+                    links to their respective html files.
 various   Eule      modes-per-line is limited to a max of 6 modes per line
           Wcc       more doc fixes
           Wcc       removed an extra space from the "Writing channel
