Forgot README on last commit.

--- a/README
+++ b/README
@@ -580,10 +580,12 @@ Last revised: March 08, 2002
 
             You can obtain help with Eggdrop in the following IRC channels:
 
-              Undernet - #eggdrop, #eggheads
+              Undernet - #eggdrop, #eggies
               EFnet - #egghelp, #eggfaq
               IRCnet - #eggdrop
               DALnet - #eggdrop
+              OPN - #eggdrop, #egghelp
+              QuakeNet - #eggdrop
 
             If you plan to ask questions in any of the above channels,
             you should be familiar with and follow IRC etiquette.
