"Detected loop: two bots exist named bot2: disconnecting bot3" sounds better than "Detected loop: disconnecting (bot2): Disconnected bot3".

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,13 @@
-$Id: UPDATES1.6,v 1.339 2002/03/10 18:10:28 wcc Exp $
+$Id: UPDATES1.6,v 1.340 2002/03/10 18:47:52 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          BarkerJr/ "Detected loop: two bots exist named bot2: disconnecting
+          Wcc       bot3" sounds better than "Detected loop: disconnecting
+                    (bot2): Disconnected bot3".
           Wcc/      Added a few channels to the README and readme.html
           SiDEWiNDR and made references to other docs in the html files
                     links to their respective html files.
