--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -1,7 +1,7 @@
 # core.english.lang
 #   core language messages for eggdrop
 #
-# $Id: core.english.lang,v 1.31 2002/02/04 05:03:35 wcc Exp $
+# $Id: core.english.lang,v 1.32 2002/03/10 18:47:52 wcc Exp $
 
 # General stuff
 0x001,Usage
@@ -97,7 +97,7 @@ module, please consult the default config file for info.\n
 0x513,AWAY
 0x516,Disconnected
 0x517,invalid bot
-0x518,Detected loop: disconnecting
+0x518,Detected loop: two bots exist named
 0x51a,from
 0x51b,outdated
 0x51c,rejected
