--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,9 +1,12 @@
-$Id: UPDATES1.6,v 1.340 2002/03/10 18:47:52 wcc Exp $
+$Id: UPDATES1.6,v 1.341 2002/03/11 05:17:00 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
-1.6.9
+1.6.10
+Found by  Fixed by  What...
+
+1.6.9 (10 March 2002)
 Found by  Fixed by  What...
           BarkerJr/ "Detected loop: two bots exist named bot2: disconnecting
           Wcc       bot3" sounds better than "Detected loop: disconnecting
