--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.341 2002/03/11 05:17:00 guppy Exp $
+$Id: UPDATES1.6,v 1.342 2002/03/12 18:07:17 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.10
 Found by  Fixed by  What...
+          Uwe       cd_cmd_table was missing a null entry at the end of the list
 
 1.6.9 (10 March 2002)
 Found by  Fixed by  What...
