--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.342 2002/03/12 18:07:17 guppy Exp $
+$Id: UPDATES1.6,v 1.343 2002/03/14 07:10:54 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.10
 Found by  Fixed by  What...
+MC_8      Wcc       added some missing command options to tcl-commands.doc
           Uwe       cd_cmd_table was missing a null entry at the end of the list
 
 1.6.9 (10 March 2002)
