more tcl-commands.doc fixes (found by MC_8)

--- a/README
+++ b/README
@@ -583,7 +583,7 @@ Last revised: March 08, 2002
               Undernet - #eggdrop, #eggies
               EFnet - #egghelp, #eggfaq
               IRCnet - #eggdrop
-              DALnet - #eggdrop
+              DALnet - #eggdrop, #botcentral
               OPN - #eggdrop, #egghelp
               QuakeNet - #eggdrop
 
