--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.346 2002/03/22 03:57:48 guppy Exp $
+$Id: UPDATES1.6,v 1.347 2002/03/22 04:01:03 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.10
 Found by  Fixed by  What...
+          NetIrc    transfer.french.lang was created
           Noyga     cmd_who is now languagified! (nice word eh?)
           Noyga     made it easier to change the number of global partyline channels
 MC_8      Wcc       more tcl-commands.doc fixes
