* fixed a few config file problems
* chattr's description in tcl-commands.doc was unclear relating to
  channel-specific flag changes

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,13 @@
-$Id: UPDATES1.6,v 1.347 2002/03/22 04:01:03 guppy Exp $
+$Id: UPDATES1.6,v 1.348 2002/03/23 17:27:52 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.10
 Found by  Fixed by  What...
+slennox   Wcc       fixed a few config file problems
+Paladin   Wcc       chattr's description in tcl-commands.doc was unclear relating to
+                    channel-specific flag changes
           NetIrc    transfer.french.lang was created
           Noyga     cmd_who is now languagified! (nice word eh?)
           Noyga     made it easier to change the number of global partyline channels
