added dw's patch and a small nick2hand fix

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.348 2002/03/23 17:27:52 wcc Exp $
+$Id: UPDATES1.6,v 1.349 2002/03/27 03:57:37 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.10
 Found by  Fixed by  What...
+MaSsKilla dw	    fixed a crash when trying to add an invalid chan using .+chan
+various   guppy     nick2hand didn't return "" on a nick that wasn't in the channel
 slennox   Wcc       fixed a few config file problems
 Paladin   Wcc       chattr's description in tcl-commands.doc was unclear relating to
                     channel-specific flag changes
