--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.350 2002/03/27 04:27:28 guppy Exp $
+$Id: UPDATES1.6,v 1.351 2002/03/29 05:53:54 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.10
 Found by  Fixed by  What...
+(^Baron^) Eule      protect(ops|friends) works with +bitch now
           guppy     reverted the handlen friendly patches
 MaSsKilla dw	    fixed a crash when trying to add an invalid chan using .+chan
 various   guppy     nick2hand didn't return "" on a nick that wasn't in the channel
