--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,9 +1,13 @@
-$Id: UPDATES1.6,v 1.351 2002/03/29 05:53:54 guppy Exp $
+$Id: UPDATES1.6,v 1.352 2002/03/29 20:47:47 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
-1.6.10
+1.6.11
+Found by  Fixed by  What...
+
+
+1.6.10 (29 March 2002)
 Found by  Fixed by  What...
 (^Baron^) Eule      protect(ops|friends) works with +bitch now
           guppy     reverted the handlen friendly patches
