added the qnet patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,11 +1,11 @@
-$Id: UPDATES1.6,v 1.352 2002/03/29 20:47:47 wcc Exp $
+$Id: UPDATES1.6,v 1.353 2002/04/16 03:45:47 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
-
+          slug      added support for the +C channel mode (noctcp) on QuakeNet's ircu
 
 1.6.10 (29 March 2002)
 Found by  Fixed by  What...
