--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.355 2002/04/16 19:56:32 guppy Exp $
+$Id: UPDATES1.6,v 1.356 2002/04/30 16:20:36 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          Wcc       updated slennox's sentinel.tcl to the latest version
 guppy     Wcc       added support for +r on Undernet's ircu 2.10.11
           upstream  fixed a crash in seen.mod with long channel names
           slug      added support for the +C channel mode (noctcp) on QuakeNet's ircu
