fixed a few bugs in uptime.mod including sending the wrong pid and sending random garbage from memory.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.356 2002/04/30 16:20:36 wcc Exp $
+$Id: UPDATES1.6,v 1.357 2002/05/03 18:08:05 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          guppy     uptime.mod now sends the proper pid and also won't send garbage if
+                    the bot currently isn't on a server
           Wcc       updated slennox's sentinel.tcl to the latest version
 guppy     Wcc       added support for +r on Undernet's ircu 2.10.11
           upstream  fixed a crash in seen.mod with long channel names
