added the channel get patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.358 2002/05/04 06:47:37 guppy Exp $
+$Id: UPDATES1.6,v 1.359 2002/05/18 00:04:35 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+various   stdarg/   added 'channel get <chan> <setting>' (backported from 1.7)
+          Mo-Ize
           guppy     uptime.mod will not unload now once loaded (this prevents you from
                     losing your stats on a .restart .. to remove, you have to .die)
           guppy     uptime.mod now sends the proper pid and also won't send garbage if
