--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.360 2002/05/18 00:07:31 guppy Exp $
+$Id: UPDATES1.6,v 1.361 2002/05/19 15:59:53 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          TaKeDa    fix for !channels when people quit or change nicks
           aXs/      made all the commands use CHANMETA instead of hardcoding channel types
           Eule
 various   stdarg/   added 'channel get <chan> <setting>' (backported from 1.7)
