--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.361 2002/05/19 15:59:53 guppy Exp $
+$Id: UPDATES1.6,v 1.362 2002/06/04 04:33:32 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          Wcc       more doc updates
           TaKeDa    fix for !channels when people quit or change nicks
           aXs/      made all the commands use CHANMETA instead of hardcoding channel types
           Eule
