--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -1,65 +1,67 @@
-
-                        Developers and Contributors
+Eggdrop Developers and Contributers
+Last revised: March 9, 2002
      _________________________________________________________________
 
-   This file attempts to list the majority of the Eggdrop developers and
-   contributors who have devoted a lot of their time into making Eggdrop
-   one of the best IRC bots ever.
+                    Eggdrop Developers and Contributers
 
-   Eggdrop was originally written by Robey Pointer.
+  This file attempts to list the majority of the Eggdrop developers and
+  contributors who have devoted a lot of their time into making Eggdrop
+  one of the best IRC bots ever.
 
-   Developers and Contributors (in alphabetical order):
+  Eggdrop was originally written by Robey Pointer.
 
-   arthur2    Jerome Carre
-   BarkerJr   Bryon Eldridge
-   Beldin     Darrin Smith
-   Ben        Ben Dover
-   ButchBub   Scott Taylor
-   Cybah      Jonathan Miles
-   david      David Newhall II
-   drummer    Dobos Lorant
-   Dude       Matthew Stiefel
-   dw         Per Johansson
-   Ernst      Ernesto Baschny
-   Eugene     Michael Ortmann
-   Eule       Axel Franke
-   Fabian     Fabian Knittel
-   FireEgl    Philip Moore
-   G`Quann    Florian Sander
-   guppy      Jeff Fisher
-   Ian        Ian Campbell
-   ITE        Federico Mennite
-   Jason      Jason Ede
-   Johoho     Wiktor Wodecki
-   KingKurly  Gregory Kubaryk
-   Kirben     Travis Howell
-   Kirk       Ian Kaney
-   Lucas      Lucas Nussbaum
-   nakee      Ely Levy
-   poptix     Matthew Hallacy
-   Raistlin   Jason Slagle
-   RebuM      Martin Matuska
-   rtc        Peter 'Rattacresh' Backes
-   SegFault   Ryan Butler
-   Shaun      Shaun Braun
-   slennox    Shayne Lennox
-   stdarg
-   Sup        Teemu Hjelt
-   SuperS
-   TaKeDa     Dariusz Kulinski
-   TheGhost   James Simmons
-   TheUnknown
-   toot       Toby Verrall
-   Tothwolf
-   Wcc        Will Buckner
+  Developers and Contributors (in alphabetical order):
 
-   Thanks go to all the people who have made individual contributions to
-   the Eggdrop project by sending bug-reports, patches, and otherwise have
-   supported the project. Patch contributors are listed in the UPDATES
-   files.
+    arthur2    Jerome Carre
+    BarkerJr   Bryon Eldridge
+    Beldin     Darrin Smith
+    Ben        Ben Dover
+    ButchBub   Scott Taylor
+    Cybah      Jonathan Miles
+    david      David Newhall II
+    drummer    Dobos Lorant
+    Dude       Matthew Stiefel
+    dw         Per Johansson
+    Ernst      Ernesto Baschny
+    Eugene     Michael Ortmann
+    Eule       Axel Franke
+    Fabian     Fabian Knittel
+    FireEgl    Philip Moore
+    G`Quann    Florian Sander
+    guppy      Jeff Fisher
+    Ian        Ian Campbell
+    ITE        Federico Mennite
+    Jason      Jason Ede
+    Johoho     Wiktor Wodecki
+    KingKurly  Gregory Kubaryk
+    Kirben     Travis Howell
+    Kirk       Ian Kaney
+    Lucas      Lucas Nussbaum
+    nakee      Ely Levy
+    poptix     Matthew Hallacy
+    Raistlin   Jason Slagle
+    RebuM      Martin Matuska
+    rtc        Peter 'Rattacresh' Backes
+    SegFault   Ryan Butler
+    Shaun      Shaun Braun
+    slennox    Shayne Lennox
+    stdarg
+    Sup        Teemu Hjelt
+    SuperS
+    TaKeDa     Dariusz Kulinski
+    TheGhost   James Simmons
+    TheUnknown
+    toot       Toby Verrall
+    Tothwolf
+    Wcc        Will Buckner
 
-   If you think that you are missing from this list, contact the Eggheads
-   Development Team at eggdev@eggheads.org.
+  Thanks go to all the people who have made individual contributions to
+  the Eggdrop project by sending bug-reports, patches, and otherwise have
+  supported the project. Patch contributors are listed in the UPDATES
+  files.
+
+  If you think that you are missing from this list, contact the Eggheads
+  Development Team at eggdev@eggheads.org.
      _________________________________________________________________
 
    Copyright (C) 2000, 2001, 2002 Eggheads Development Team
