I'm sure that one day, I'll eventually finish this.. sigh.. :P

--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,9 @@
 Compilation and Installation of Eggdrop
 Last revised: March 08, 2002
-  ________________________________________________________________________
+     _________________________________________________________________
+
+                  Compilation and Installation of Eggdrop
+
 
 This is the quick install guide; if you have had little or no experience
 with unix or Eggdrop, READ THE README FILE NOW! This file is only for
