--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.364 2002/06/04 07:02:45 wcc Exp $
+$Id: UPDATES1.6,v 1.365 2002/06/06 03:11:00 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          BarkerJr  updates to doc/MODULES
           Wcc       more doc updates
           TaKeDa    fix for !channels when people quit or change nicks
           aXs/      made all the commands use CHANMETA instead of hardcoding channel types
