--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.366 2002/06/12 21:45:18 wcc Exp $
+$Id: UPDATES1.6,v 1.367 2002/06/13 20:43:07 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          Wcc       added support for halfops (channel mode +h)
 MaSsKilla Wcc       don't allow channels containing commas to be added.. 
                     also made an error message more clear
           BarkerJr  updates to doc/MODULES
