--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.367 2002/06/13 20:43:07 wcc Exp $
+$Id: UPDATES1.6,v 1.368 2002/06/17 03:58:53 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+guppy     Wcc       msg_whois should require an argument.
           Wcc       added support for halfops (channel mode +h)
 MaSsKilla Wcc       don't allow channels containing commas to be added.. 
                     also made an error message more clear
