added a small cosmetic patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.368 2002/06/17 03:58:53 wcc Exp $
+$Id: UPDATES1.6,v 1.369 2002/07/07 22:35:24 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          guppy     changed the .status output a bit (includes the name of the config file
+                    now)
 guppy     Wcc       msg_whois should require an argument.
           Wcc       added support for halfops (channel mode +h)
 MaSsKilla Wcc       don't allow channels containing commas to be added.. 
