--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.369 2002/07/07 22:35:24 guppy Exp $
+$Id: UPDATES1.6,v 1.370 2002/07/09 05:37:22 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          BarkerJr  don't show +inactive channels in a remote .who
           guppy     changed the .status output a bit (includes the name of the config file
                     now)
 guppy     Wcc       msg_whois should require an argument.
