the new handlen friendly patch --- please people w/ handlen > 9 test this :)

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.370 2002/07/09 05:37:22 guppy Exp $
+$Id: UPDATES1.6,v 1.371 2002/07/09 05:40:55 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          Zart      added handlen friendly code to various commands (this is a new patch to
+                    replace the handlen friendly patch reverted in 1.6.10
           BarkerJr  don't show +inactive channels in a remote .who
           guppy     changed the .status output a bit (includes the name of the config file
                     now)
