--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.371 2002/07/09 05:40:55 guppy Exp $
+$Id: UPDATES1.6,v 1.372 2002/07/09 05:43:27 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          Zart      the return values of uname() are now properly checked
           Zart      added handlen friendly code to various commands (this is a new patch to
                     replace the handlen friendly patch reverted in 1.6.10
           BarkerJr  don't show +inactive channels in a remote .who
