--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.372 2002/07/09 05:43:27 guppy Exp $
+$Id: UPDATES1.6,v 1.373 2002/07/09 05:46:34 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+dork      TaKeDa    fixed a crash while doing .kickban -nick
           Zart      the return values of uname() are now properly checked
           Zart      added handlen friendly code to various commands (this is a new patch to
                     replace the handlen friendly patch reverted in 1.6.10
