eggdrop works with tcl8.4b1 now

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.373 2002/07/09 05:46:34 guppy Exp $
+$Id: UPDATES1.6,v 1.374 2002/07/18 19:01:44 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          guppy     some small changes to make eggdrop work with tcl8.4b1 (it won't work with
+                    tcl8.4a1 or a2 anymore though)
 dork      TaKeDa    fixed a crash while doing .kickban -nick
           Zart      the return values of uname() are now properly checked
           Zart      added handlen friendly code to various commands (this is a new patch to
