--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.374 2002/07/18 19:01:44 guppy Exp $
+$Id: UPDATES1.6,v 1.375 2002/07/19 05:16:52 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          Wcc       log PINGs/PONGs sent to the server in LOG_SVROUT
           guppy     some small changes to make eggdrop work with tcl8.4b1 (it won't work with
                     tcl8.4a1 or a2 anymore though)
 dork      TaKeDa    fixed a crash while doing .kickban -nick
