Fixed a bug causing '[HH:MM] !!! OVER MAXIMUM <queue> QUEUE' to be logged to LOG_SVROUT.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.375 2002/07/19 05:16:52 wcc Exp $
+$Id: UPDATES1.6,v 1.376 2002/07/19 05:25:33 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          Wcc/      fixed a bug causing "[HH:MM] !!! OVER MAXIMUM <queue> QUEUE" to be
+          [sL]      logged to LOG_SVROUT
           Wcc       log PINGs/PONGs sent to the server in LOG_SVROUT
           guppy     some small changes to make eggdrop work with tcl8.4b1 (it won't work with
                     tcl8.4a1 or a2 anymore though)
