added Eule's kickbanfix patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.376 2002/07/19 05:25:33 wcc Exp $
+$Id: UPDATES1.6,v 1.377 2002/07/22 05:43:27 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          Eule      fixed cmd_kickban so it works
           Wcc/      fixed a bug causing "[HH:MM] !!! OVER MAXIMUM <queue> QUEUE" to be
           [sL]      logged to LOG_SVROUT
           Wcc       log PINGs/PONGs sent to the server in LOG_SVROUT
