--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.377 2002/07/22 05:43:27 guppy Exp $
+$Id: UPDATES1.6,v 1.378 2002/07/22 05:48:52 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+          Wcc       improved the logic in cmd_mnsban when specifying what happen to remove and
+                    where to remove it from
           Eule      fixed cmd_kickban so it works
           Wcc/      fixed a bug causing "[HH:MM] !!! OVER MAXIMUM <queue> QUEUE" to be
           [sL]      logged to LOG_SVROUT
