--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.379 2002/07/22 05:55:22 guppy Exp $
+$Id: UPDATES1.6,v 1.380 2002/07/25 17:40:18 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.11
 Found by  Fixed by  What...
+various   Wcc       need-[limit/invite/unban/key] work now
           [sL]      fixed a problem with 'connect' and 'control' where the script would abort
                     prematurely
           Wcc       improved the logic in cmd_mnsban when specifying what happen to remove and
