--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,9 +1,12 @@
-$Id: UPDATES1.6,v 1.380 2002/07/25 17:40:18 guppy Exp $
+$Id: UPDATES1.6,v 1.381 2002/07/26 16:28:30 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
-1.6.11
+1.6.22
+Found by  Fixed by  What...
+
+1.6.11 (26 July 2002)
 Found by  Fixed by  What...
 various   Wcc       need-[limit/invite/unban/key] work now
           [sL]      fixed a problem with 'connect' and 'control' where the script would abort
