--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.381 2002/07/26 16:28:30 guppy Exp $
+$Id: UPDATES1.6,v 1.382 2002/07/26 17:55:18 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
-1.6.22
+1.6.12
 Found by  Fixed by  What...
+Segfault            reverted the sockfix patches from 1.6.11
 
 1.6.11 (26 July 2002)
 Found by  Fixed by  What...
