--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,9 +1,12 @@
-$Id: UPDATES1.6,v 1.382 2002/07/26 17:55:18 guppy Exp $
+$Id: UPDATES1.6,v 1.383 2002/07/26 18:33:34 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
-1.6.12
+1.6.13
+Found by  Fixed by  What...
+
+1.6.12 (26 July 2002)
 Found by  Fixed by  What...
 Segfault            reverted the sockfix patches from 1.6.11
 
