--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.383 2002/07/26 18:33:34 guppy Exp $
+$Id: UPDATES1.6,v 1.384 2002/07/31 20:04:10 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          BarkerJr  documentation updates related to the PUBM bind
 
 1.6.12 (26 July 2002)
 Found by  Fixed by  What...
