Made ban-time a channel int (2).

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.384 2002/07/31 20:04:10 wcc Exp $
+$Id: UPDATES1.6,v 1.385 2002/08/03 02:54:37 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          Wcc       made [ban/invite/exempt]-time a channel int
           BarkerJr  documentation updates related to the PUBM bind
 
 1.6.12 (26 July 2002)
