--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.386 2002/08/05 01:56:11 wcc Exp $
+$Id: UPDATES1.6,v 1.387 2002/08/07 22:05:48 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+[sL]      Wcc       more broken dprintf's in irc commands
 ble       Wcc       fixed a broken dprintf in cmd_kick()
           Wcc       made [ban/invite/exempt]-time a channel int
           BarkerJr  documentation updates related to the PUBM bind
