Removed names parsing, as it causes many problems and was only added for compatability with an old version of unrealircd.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.387 2002/08/07 22:05:48 wcc Exp $
+$Id: UPDATES1.6,v 1.388 2002/08/08 06:57:58 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+ble       Wcc       removed names parsing, as it causes many problems and was only
+                    added for compatability with an old version of unrealircd
 [sL]      Wcc       more broken dprintf's in irc commands
 ble       Wcc       fixed a broken dprintf in cmd_kick()
           Wcc       made [ban/invite/exempt]-time a channel int
