--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,13 @@
-$Id: UPDATES1.6,v 1.388 2002/08/08 06:57:58 wcc Exp $
+$Id: UPDATES1.6,v 1.389 2002/08/08 19:31:44 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+various   Wcc/      fixed a bug where if the bot is kicked while channel information is
+          [sL]      still being received, the bot will think it's still on the channel and
+                    not rejoin
 ble       Wcc       removed names parsing, as it causes many problems and was only
                     added for compatability with an old version of unrealircd
 [sL]      Wcc       more broken dprintf's in irc commands
