Return 5 from dccsend if the file exists in the temp directory and copy-to-tmp is enabled. Patch by Johoho (modified).

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.393 2002/08/15 00:01:00 wcc Exp $
+$Id: UPDATES1.6,v 1.394 2002/08/15 04:51:51 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          Johoho    return 5 from dccsend if the file exists in the temp directory and
+                    copy-to-tmp is enabled
 various   BHAB      LD_LIBRARY_PATH now may not have to be set in some situations
           poptix    fixed a possible exploit in reaffirm_owners()
 KuNgFo0   Wcc/      friends/ops/bots are now correctly unbanned when a ban is set on a
