Show the number of hops in .trace's output. Patch by BarkerJr.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.395 2002/08/21 01:57:25 wcc Exp $
+$Id: UPDATES1.6,v 1.396 2002/08/21 02:05:24 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          BarkerJr  show the number of hops in .trace's output
           Mo-Ize    use the proper dynamic lib extention on Mac OSX
           Johoho    return 5 from dccsend if the file exists in the temp directory and
                     copy-to-tmp is enabled
