Cosmetic changes to share_stick_[exempt/invite/ban].

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.398 2002/08/25 04:44:44 wcc Exp $
+$Id: UPDATES1.6,v 1.399 2002/08/25 05:13:33 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          Wcc       cosmetic changes to share_stick_[exempt/invite/ban]
           TaKeDa    msg_key and msg_invite did not work properly for !channels
           BarkerJr  show the number of hops in .trace's output
           Mo-Ize    use the proper dynamic lib extention on Mac OSX
