Don't log joined

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.399 2002/08/25 05:13:33 wcc Exp $
+$Id: UPDATES1.6,v 1.400 2002/08/30 03:07:04 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          blaster^  don't log "joined #chan but didn't want to" in certian cases where
+                    the channel was newly removed or set inactive
           Wcc       cosmetic changes to share_stick_[exempt/invite/ban]
           TaKeDa    msg_key and msg_invite did not work properly for !channels
           BarkerJr  show the number of hops in .trace's output
