Changed 'Johoho' to 'Wiktor' in the UPDATES file as requested.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,4 +1,4 @@
-$Id: UPDATES1.6,v 1.400 2002/08/30 03:07:04 wcc Exp $
+$Id: UPDATES1.6,v 1.401 2002/08/31 00:39:04 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
@@ -11,7 +11,7 @@ Found by  Fixed by  What...
           TaKeDa    msg_key and msg_invite did not work properly for !channels
           BarkerJr  show the number of hops in .trace's output
           Mo-Ize    use the proper dynamic lib extention on Mac OSX
-          Johoho    return 5 from dccsend if the file exists in the temp directory and
+          Wiktor    return 5 from dccsend if the file exists in the temp directory and
                     copy-to-tmp is enabled
           poptix    fixed a possible exploit in reaffirm_owners()
 KuNgFo0   Wcc/      friends/ops/bots are now correctly unbanned when a ban is set on a
